fix notificaton inner text alignemnt

--- a/assets/scss/components/_notifications.scss
+++ b/assets/scss/components/_notifications.scss
@@ -247,6 +247,9 @@ Styleguide Notification.Highlight
     display: block;
     padding: em(2) 0;
   }
+  p {
+    margin: 0.75em 0;
+  }
 }
 
 .highlight-message--content-body {
